--- a/about.html
+++ b/about.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About — Your Name</title>
+  <title>אודות — אופיר בושי</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
-    <a href="/" class="logo">yourname</a>
+    <a href="/" class="logo">אופיר בושי</a>
     <div class="nav-links">
-      <a href="/blog.html">blog</a>
-      <a href="/projects.html">projects</a>
-      <a href="/about.html">about</a>
+      <a href="/blog.html">בלוג</a>
+      <a href="/projects.html">פרויקטים</a>
+      <a href="/about.html">אודות</a>
     </div>
   </nav>
 
   <main>
     <article>
-      <h1>About</h1>
+      <h1>אודות</h1>
       <div class="prose" style="margin-top: 1.5rem;">
-        <p>Hi, I'm [Your Name]. I'm a web developer based in [City].</p>
+        <p>שלום, אני אופיר בושי. אני מפתח אתרים מ[עיר].</p>
 
-        <p>I've been building things for the web since [year]. Currently, I'm working on [what you're working on].</p>
+        <p>אני בונה דברים לאינטרנט מאז [שנה]. כרגע אני עובד על [מה שאתה עובד עליו].</p>
 
-        <p>When I'm not coding, you can find me [your hobbies].</p>
+        <p>כשאני לא כותב קוד, אפשר למצוא אותי ב[תחביבים שלך].</p>
 
-        <h2>Get in touch</h2>
-        <p>Feel free to reach out via <a href="mailto:you@email.com">email</a> or find me on <a href="https://twitter.com/you">Twitter</a>.</p>
+        <h2>יצירת קשר</h2>
+        <p>מוזמנים לפנות אליי ב<a href="mailto:you@email.com">אימייל</a> או למצוא אותי ב<a href="https://twitter.com/you">טוויטר</a>.</p>
       </div>
     </article>
   </main>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 אופיר בושי</p>
   </footer>
 </body>
 </html>
