Update blog and post templates: enhance date formatting, localize titles, and improve image handling

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,5 +15,5 @@
 <section class="recent">
     <h2>פוסטים אחרונים</h2>
     {{posts:3}}
-    <a href="/blog.html" class="see-all">כל הפוסטים →</a>
+    <a href="/blog.html" class="see-all">כל הפוסטים</a>
 </section>
