Update blog description: enhance content to reflect personal insights and spiritual growth themes

--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -2,6 +2,8 @@
 <!-- description: Get in touch with us -->
 
 <h1>בלוג</h1>
-<p style="color: var(--text-muted); margin: 0.5rem 0 2rem;">מחשבות על פיתוח אתרים ודברים נוספים.</p>
+<p style="color: var(--text-muted); margin: 0.5rem 0 2rem;">
+    כאן תמצאו פוסטים, מחשבות ותובנות אישיות על אמונה בישוע המשיח, מסע רוחני, לימוד מהכתובים, וכלים לצמיחה רוחנית.
+</p>
 
 {{posts}}
