--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,5 +15,7 @@
 <section class="recent">
     <h2>פוסטים אחרונים</h2>
     {{posts:3}}
-    <a href="/blog.html" class="see-all">כל הפוסטים</a>
+    <a href="/blog.html" class="see-all">
+        לכל הפוסטים
+    </a>
 </section>
