refactor: update post rendering syntax and comment out 'see all' link

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,8 +14,8 @@
 
 <section class="recent">
     <h2>פוסטים אחרונים</h2>
-    {{posts:3}}
-    <a href="/blog.html" class="see-all">
+    {{posts}}
+    <!-- <a href="/blog.html" class="see-all">
         לכל הפוסטים
-    </a>
+    </a> -->
 </section>
