--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -2,7 +2,7 @@
 <!-- description: Get in touch with us -->
 
 <h1>בלוג</h1>
-<p style="color: var(--text-muted); margin: 0.5rem 0 2rem;">
+<p style="color: var(--text-muted); margin-bottom: var(--space-md); margin-top: var(--space-sm);">
     כאן תמצאו פוסטים, מחשבות ותובנות אישיות על אמונה בישוע המשיח, מסע רוחני, לימוד מהכתובים, וכלים לצמיחה רוחנית.
 </p>
 
