--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,38 +1,31 @@
 <section class="hero">
     <div class="hero-content">
         <div class="hero-profile">
-            <!-- <div class="profile-image">
-                <img src="/images/profile-placeholder.svg" alt="אופיר" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
-                <div class="profile-placeholder" style="display: none;">
-                    <svg width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-                        <circle cx="12" cy="7" r="4"></circle>
-                    </svg>
-                </div>
-            </div> -->
-            <h1>ברוכים הבאים</h1>
+            <h1> הולכים בדרך. מוצאים אמת. בוחרים בחיים. </h1>
         </div>
         <p class="hero-description">
-            זהו מרחב המוקדש לאמונה בישוע המשיח. כאן תמצאו מחשבות, חוויות ולימוד על הדרך הרוחנית,
-            על משמעות האמונה ועל האתגרים היומיומיים.
-            המטרה היא לחלוק תובנות מהכתובים, סיפורים מעוררי השראה וכלים לצמיחה רוחנית משותפת.
+            יומן מסע על החיפוש אחר אמת בעולם רועש. בלי תשובות מוכנות מראש, אלא עם רצון פשוט להבין איך הדרך של ישוע פוגשת
+            אותנו בלב, בשכל ובחיים עצמם.
         </p>
         <div class="hero-links" data-matomo-name="hero-external-links">
-            <a href="https://www.yeshuanekuda.co.il/" target="_blank" class="hero-link" data-track-category="Hero" data-track-action="External Link" data-track-name="Yeshua Nekuda">
+            <a href="https://www.yeshuanekuda.co.il/" target="_blank" class="hero-link" data-track-category="Hero"
+                data-track-action="External Link" data-track-name="Yeshua Nekuda">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
                     <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
                 </svg>
                 <span>ישוע נקודה</span>
             </a>
-            <a href="https://www.youtube.com/@yeshua_nekuda" target="_blank" class="hero-link youtube" data-track-category="Hero" data-track-action="External Link" data-track-name="YouTube Channel">
+            <a href="https://www.youtube.com/@yeshua_nekuda" target="_blank" class="hero-link youtube"
+                data-track-category="Hero" data-track-action="External Link" data-track-name="YouTube Channel">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                     <path
                         d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z" />
                 </svg>
                 <span>ביוטיוב</span>
             </a>
-            <a href="https://igod.co.il/" target="_blank" class="hero-link" data-track-category="Hero" data-track-action="External Link" data-track-name="iGod">
+            <a href="https://igod.co.il/" target="_blank" class="hero-link" data-track-category="Hero"
+                data-track-action="External Link" data-track-name="iGod">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path>
                     <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path>
@@ -50,7 +43,8 @@
             {{posts:4}}
         </div>
         <div class="see-all-container">
-            <a href="/blog.html" class="see-all" data-track-category="Navigation" data-track-action="Click" data-track-name="See All Posts">
+            <a href="/blog.html" class="see-all" data-track-category="Navigation" data-track-action="Click"
+                data-track-name="See All Posts">
                 לכל הפוסטים
             </a>
         </div>
