fix(about): update about section text and remove center alignment from about text

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,6 +1,8 @@
 <section class="hero about-hero">
     <div class="hero-content">
-        <h1>שלום, אני אופיר</h1>
+        <h1>
+            נעים להכיר, אופיר.
+        </h1>
     </div>
 </section>
 
@@ -10,21 +12,25 @@
             <img src="/profile.jpg" alt="אופיר" class="profile-image" width="400" height="400">
         </div>
         <article class="about-text">
-            <p>נעים להכיר.</p>
+            <p>
+                אני לא כומר, ולא רב, ואין לי את כל התשובות. אני פשוט אדם שבוחר כל יום מחדש ללכת בדרך של ישוע – גם
+                כשהציניות מאיימת לנצח, וגם כשהחיים לא מסתדרים בדיוק כמו בתיאוריה.
+            </p>
 
-            <p>אני לא תיאולוג מוסמך ולא איש דת. אני פשוט בן אדם שבוחר כל יום מחדש ללכת בדרך של ישוע, גם כשהעולם סביבי
-                נראה כאילו הוא הולך לכיוון הפוך.</p>
+            <p>
+                הבלוג הזה הוא לא "הרצאה", אלא שולחן העבודה שלי. המקום שבו אני מנסה לחבר בין הטקסטים העתיקים לבין הפקקים
+                של
+                הבוקר, ולבדוק איך אהבה, סליחה ואמת נראות במציאות הישראלית של 2025.
+            </p>
 
-            <p>יצרתי את המקום הזה בשבילי קודם כל – מקום לפרוס על השולחן את המחשבות המסובכות, את השאלות הקשות, ואת
-                הניסיון להבין איך הטקסט העתיק הזה מדבר אלי כשאני קורא את החדשות בבוקר או עומד בפקק בדרך לעבודה.</p>
+            <p>
+                אמונה מבחינתי היא לא משהו ששומרים ליום שבת (או ראשון), אלא הדרך הכי כנה שאני מכיר לחיות את החיים עצמם.
+            </p>
 
-            <p>אמונה זה לא משהו שאני "שם על המדף" ליום שישי. זה לא נושא אינטלקטואלי מרחף. בשבילי, זו הדרך הכי אמיתית
-                לחיות את החיים. זה המקום שבו אני מנסה (ולא תמיד מצליח) להבין מה זה אומר לאהוב, לסלוח, ולחיות באמת.</p>
+            <p>
+                אם הגעתם לכאן, אתם מוזמנים להצטרף. להסכים, להתווכח, ובעיקר – לחשוב.
+            </p>
 
-            <p>אם הגעת לכאן – אתה מוזמן ללכת איתי בדרך. להסכים, לא להסכים (בכבוד), ובעיקר לחשוב ביחד על הדברים שחשובים
-                באמת.</p>
-
-            <p>בואו נדבר.</p>
         </article>
     </div>
 </section>
