feat(about): expand about section with additional context on Jesus and Jewish identity

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -23,12 +23,38 @@
                 הבוקר, ולבדוק איך אהבה, סליחה ואמת נראות במציאות הישראלית של 2025.
             </p>
 
+            <h2>
+                אז למה דווקא ישוע?
+            </h2>
+
             <p>
-                אמונה מבחינתי היא לא משהו ששומרים ליום שבת (או ראשון), אלא הדרך הכי כנה שאני מכיר לחיות את החיים עצמם.
+                במשך אלפיים שנה, העולם (וגם אנחנו) עשה עבודה מצוינת בלהפוך את ישוע לזר. ציירו אותו עם עיניים כחולות,
+                עטפו אותו בתרבות אירופאית וקראו לו בשמות לועזיים.
             </p>
 
             <p>
-                אם הגעתם לכאן, אתם מוזמנים להצטרף. להסכים, להתווכח, ובעיקר – לחשוב.
+                אבל כשמקלפים את כל השכבות האלה וחוזרים לטקסט המקורי, מגלים משהו אחר לגמרי. לא נוצרי מאירופה, אלא יהודי
+                מהגליל. אחד משלנו.
+            </p>
+
+            <p>
+                בברית החדשה (בפרק ד' של יוחנן) ישוע מדבר עם אישה שומרונית. היא מנסה לגרור אותו לוויכוח
+                תיאולוגי על הר גריזים מול ירושלים. התשובה שלו חדה: "אתם משתחווים למה שאינכם מכירים; אנו משתחווים למה
+                שאנו מכירים, שהרי הישועה היא מאת היהודים."
+            </p>
+
+            <p>
+                שימו לב ל-"אנו". הוא לא יצר דת חדשה ומנותקת; הוא פעל מתוך הלב של הזהות היהודית. הוא דיבר את השפה, חי את
+                החגים, נשם את הנופים האלה ודיבר על אלוהי ישראל.
+            </p>
+
+            <p>
+                הבלוג הזה הוא הניסיון שלי לחבר מחדש את החתיכות. להבין איך דווקא בדרך שלו – הדרך שהתחילה כאן, בישראל –
+                נמצאות התשובות לשאלות הכי בוערות של החיים שלנו היום. לא כאימוץ של תרבות זרה, אלא כחזרה הביתה.
+            </p>
+
+            <p>
+                מוזמנים להצטרף, להסכים, להתווכח, ובעיקר – לחשוב.
             </p>
 
         </article>
