fix(contact): remove emoji from response time message for consistency

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -20,7 +20,7 @@
 
                 <div class="contact-method">
                     <h2>זמן תגובה</h2>
-                    <p>אני משתדל לענות לכל פניה תוך מספר ימים. סבלנות מוערכת! 🙏</p>
+                    <p>אני משתדל לענות לכל פניה תוך מספר ימים. סבלנות מוערכת!</p>
                 </div>
 
                 <div class="contact-method">
