fix(posts): standardize punctuation in Hebrew text for consistency

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,7 +15,7 @@
         </div>
         <article class="about-text">
             <p>
-                אני לא כומר, ולא רב, ואין לי את כל התשובות. אני פשוט אדם שבוחר כל יום מחדש ללכת בדרך של ישוע – גם
+                אני לא כומר, ולא רב, ואין לי את כל התשובות. אני פשוט אדם שבוחר כל יום מחדש ללכת בדרך של ישוע - גם
                 כשהציניות מאיימת לנצח, וגם כשהחיים לא מסתדרים בדיוק כמו בתיאוריה.
             </p>
 
@@ -51,12 +51,12 @@
             </p>
 
             <p>
-                הבלוג הזה הוא הניסיון שלי לחבר מחדש את החתיכות. להבין איך דווקא בדרך שלו – הדרך שהתחילה כאן, בישראל –
+                הבלוג הזה הוא הניסיון שלי לחבר מחדש את החתיכות. להבין איך דווקא בדרך שלו - הדרך שהתחילה כאן, בישראל -
                 נמצאות התשובות לשאלות הכי בוערות של החיים שלנו היום. לא כאימוץ של תרבות זרה, אלא כחזרה הביתה.
             </p>
 
             <p>
-                מוזמנים להצטרף, להסכים, להתווכח, ובעיקר – לחשוב.
+                מוזמנים להצטרף, להסכים, להתווכח, ובעיקר - לחשוב.
             </p>
 
         </article>
