--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -10,7 +10,7 @@
     <div class="container">
         <article class="contact-text">
             <p>
-                אשמח לשמוע מכם! אם יש לכם שאלות, רעיונות לנושאים, או סתם תרצו לשתף מחשבות – אשמח לקבל הודעה.
+                אשמח לשמוע מכם! אם יש לכם שאלות, רעיונות לנושאים, או סתם תרצו לשתף מחשבות - אשמח לקבל הודעה.
             </p>
 
             <div class="contact-methods">
